--- a/public/css/gr.css
+++ b/public/css/gr.css
@@ -29,9 +29,9 @@ body {
 }
 .carousel-item > img {
   position: absolute;
-  /*top: 0; 
-  /*left: 0; */
-  width: 100%;
+  top: 0; 
+  left: 0;
+  min-width: 100%;
   height: 50rem;
 }
 
