--- a/public/css/gr.css
+++ b/public/css/gr.css
@@ -22,20 +22,38 @@ body {
   z-index: 10;
 }
 
+.carousel-inner {
+  position: relative;
+  width: 100%;
+  max-height:100vh;
+  overflow: hidden;
+}
+
 /* Declare heights because of positioning of img element */
 .carousel-item {
-  height: 50rem;
+  height: auto;
   background-color: #777;
 }
 .carousel-item > img {
-  position: absolute;
+ /* position: absolute;
   top: 0; 
   left: 0;
   min-width: 100%;
-  height: 50rem;
+  height: 50rem; */
+  width: 100%;
+  height: auto;
 }
 
+@media screen and (max-width: 700px)
+{
+.desktop {
+  display: none; 
+}
+}
 
+.desktop {
+  width:auto;
+}
 /* MARKETING CONTENT
 -------------------------------------------------- */
 
